panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_array_of_array_of_char_ptr_with_string_literal.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=88
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (s~3 `array<array<ptr<char const>; 1>; 1>` @0)
            (braced
               (subobject +0
                  (noop-type-conversion `ptr<char const>` @0
                     (noop-type-conversion `ptr<char>` @0
                        (addressof `ptr<array<char; 12>>` @0
                           (string `array<char; 12>` @void "hello world\0")))))))
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (string `array<char; 4>` @void "%s\n\0"))))
               (deref `ptr<char const>` @32
                  (ptr-add `ptr<ptr<char const>>` @40
                     (noop-type-conversion `ptr<ptr<char const>>` @40
                        (addressof `ptr<array<ptr<char const>; 1>>` @40
                           (deref `array<ptr<char const>; 1>` @40
                              (ptr-add `ptr<array<ptr<char const>; 1>>` @48
                                 (noop-type-conversion `ptr<array<ptr<char const>; 1>>` @48
                                    (addressof `ptr<array<array<ptr<char const>; 1>; 1>>` @48
                                       (s~3 `array<array<ptr<char const>; 1>; 1>` @0)))
                                 (sign-extend `long` @56 (0 `int` @64))))))
                     (sign-extend `long` @56 (0 `int` @64))))))
         (return (truncate `int` @8 (1 `unsigned long` @16))))))

----- stderr -----
