panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_char_ptr_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_char_ptr_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_char_ptr_with_string_literal.c"
   (declaration external (strlen~0 `fn(∅: ptr<char const>) -> unsigned long` (static strlen)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (s~3 `ptr<char const>` @0)
            (braced
               (subobject +0
                  (noop-type-conversion `ptr<char const>` @0
                     (noop-type-conversion `ptr<char>` @0
                        (addressof `ptr<array<char; 4>>` @0
                           (string `array<char; 4>` @void "abc\0")))))))
         (return
            (truncate `int` @8
               (call `unsigned long` @16
                  (addressof `ptr<fn(∅: ptr<char const>) -> unsigned long>` @24
                     (strlen~0 `fn(∅: ptr<char const>) -> unsigned long` (static strlen)))
                  (s~3 `ptr<char const>` @0)))))))

----- stderr -----
