panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__initialisation__test_error_global_name_with_definition_later_redeclared_in_local_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/test_error_global_name_with_definition_later_redeclared_in_local_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_error_global_name_with_definition_later_redeclared_in_local_scope.c"
   (definition external (name~0 `int` (static name)) (42 `int`))
   (function-definition external stack-size=24
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (name~3 `int` @0) (27 `int` @0))
         (compound-statement
            (declaration external (name~4 `int` (static name)) ∅)
            (return (name~4 `int` (static name)))))))

----- stderr -----
